update doc place
